# guidance-for-claude-code-with-amazon-bedrock

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CHANGES-CLOUDWATCH.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  KEY_FIXES.md  PARTITION_STRATEGY_ANALYSIS.md  PARTITION_SUPPORT_ASSESSMENT.md  PBAC_README.md  QUICK_START.md  QUOTA_MANAGEMENT.md  README.md  TESTING_PARTITION_SUPPORT.md  USER_GUIDE.md  mkdocs.yml
.claude/: settings.json
.claude-plugin/: README.md  marketplace.json
.claude/hooks/: auto-validate.sh  protect-config.sh
.claude/rules/: auth-type-compat.md  aws-identifiers.md  azure-tenant-extraction.md  binary-distribution.md  branch-strategy.md  breaking-change-checklist.md  cfn-naming.md  cli-command-pattern.md  cloudformation.md  config-sync.md  credential-flow.md  credential-helper-parity.md  credential-provider.md  credential-recursion.md  custom-domain-vpc.md  distribution-manifest-parity.md  doctor-checks.md  go-binary-architecture.md  iam-actions.md  issuer-url-format.md  keyring-chunking.md  models.md  naming-and-labels.md  naming-claude-desktop.md  (+13 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  size-budget.json
deployment/: CLAUDE.md
docs/: CLAUDE.md  E2E_TESTING.md  ENTERPRISE_GOVERNANCE.md
enterprise-addons/: README.md
nexus-ui/: .env.example  .env.production  index.html  package-lock.json  package.json
scripts/: build-windows-local.ps1  prepare-offline-go-bundle.sh
source/: CLAUDE.md  pyproject.toml
source/sampling/: .gitignore  README.md  bedrock_log_sampler.py  pyproject.toml
(+623 files in other folders)
